--- a/partie 1/ex 2/index.html
+++ b/partie 1/ex 2/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex1</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>ex2</title>
 </head>
 <body>
     <p id="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium recusandae molestiae ullam aut dolorem. Vitae dolores quod provident dolor harum nam recusandae nobis fugiat vel expedita. Debitis veniam recusandae qui.</p>
